force-app/main/default/objects/Attendee__c/Attendee__c.object-meta.xml
<CustomObject>
    <description>Informações sobre os participantes inscritos no evento ou sessão.</description>
    <label>Participante</label>
    <nameField>
        <label>Nome do Participante</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participantes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>