force-app/main/default/objects/Attendee__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Endereço associado ao participante, selecionado a partir de registros de localização existentes.</description>
    <inlineHelpText>Busque e selecione um endereço previamente cadastrado. Caso não exista, verifique a necessidade de criar um novo registro de localização.</inlineHelpText>
    <label>Endereço</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>