force-app/main/default/objects/Attendee__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Nome da empresa ou instituição à qual o participante está vinculado.</description>
    <inlineHelpText>Informe o nome completo da organização, se aplicável.</inlineHelpText>
    <label>Empresa</label>
    <length>30</length>
    <type>Text</type>
</CustomField>