force-app/main/default/objects/Attendee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Endereço de e-mail do participante.</description>
    <inlineHelpText>Informe um e-mail válido, que será utilizado para envio de confirmações e comunicações.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>