force-app/main/default/objects/Attendee__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Número de telefone do participante.</description>
    <inlineHelpText>Inclua o número com código do país e DDD para facilitar o contato, se necessário.</inlineHelpText>
    <label>Telefone</label>
    <type>Phone</type>
</CustomField>